# WSI-Service

./: Dockerfile  README.md
wsi_service/: settings.py
wsi_service/utils/: app_utils.py
wsi_service_base_plugins/cooler/: pyproject.toml
wsi_service_base_plugins/cooler/wsi_service_plugin_cooler/: __init__.py  slide.py
wsi_service_base_plugins/tiffslide/wsi_service_plugin_tiffslide/: slide.py
