[tool.poetry]
name = "wsi-service-plugin-cooler"
version = "0.4.3"
description = ""
authors = ["EMPAIA <dev-support@empaia.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.22.3"
pandas = "^2.2.3"
h5py = "^3.13.0"
cooler = "^0.10.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
